--- a/www/index.html
+++ b/www/index.html
@@ -13,16 +13,16 @@
       There is permanenent revolution of different work in progress or random pdf ideas laying around.
     </pre>
 
-		<h2>RUE.pdf</h2>
+		<h2>Square BS.pdf</h2>
 
     <form onsubmit="window.makeRue(event)">
-      <button type="submit" name="action">Make RUE</button>
+      <button type="submit" name="action">Make Square BS</button>
       <br />
       <br />
       <pre>
       Latest minimalistic and abstract PDF with these kind of pages:
-      - circle: scratchpad pages - for all temporary content to not return to, use by entering random invisible link inside the circle
-      - "-": title page, squence of pages for content to return to
+      - point/circle: scratchpad pages - for all temporary content to not return to, use by entering random invisible link inside the circle
+      - "-": title page, squence of pages for content to return to like catchall
       - "+": decomposition into 36 pages, to be used for daily done/todo lists most likely, inside is a square grid with 15 lines, can have own predefined lines for every page (the default configuration goes with numbers for time at the right, and three categories at the left as template for todo list categories, as an example)
       - summary page of a kind with triangle/3D plot idea to try, can be used for three categories of done items or other things to track per day
       It goes with predefined settings below, if all text is removed and checkbox is undone then it becomes very abstract pdf for any purpose.
@@ -72,13 +72,28 @@
 						/>
 				Saw at the right
 			</label>
-			<label style='display: block'>
-				Renamings of entries
+			<label style='display: flex'>
+				Renamings of grid entries 1-36
         <textarea name="renamings" rows="5" cols="15" placeholder="36 - review">32 - w1
 33 - w2
 34 - w3
 35 - w4
 36 - w5</textarea>
+			</label>
+			<label style='display: flex'>
+				Square items
+        <textarea name="square_items" rows="12" cols="15" placeholder="each line is new item for square section/area">#1
+#2
+#3
+#4
+#5
+#6
+#7
+#8
+#9
+#10
+#11
+#12</textarea>
 			</label>
 			<label style='display: block'>
 				Line thickness
