--- a/www/index.html
+++ b/www/index.html
@@ -22,10 +22,11 @@
       <pre>
       Latest minimalistic and abstract PDF with these kind of pages:
       - point/circle: scratchpad pages - for all temporary content to not return to, use by entering random invisible link inside the circle
-      - "-": title page, squence of pages for content to return to like catchall
-      - "+": decomposition into 36 pages, to be used for daily done/todo lists most likely, inside is a square grid with 15 lines, can have own predefined lines for every page (the default configuration goes with numbers for time at the right, and three categories at the left as template for todo list categories, as an example)
-      - summary page of a kind with triangle/3D plot idea to try, can be used for three categories of done items or other things to track per day
-      It goes with predefined settings below, if all text is removed and checkbox is undone then it becomes very abstract pdf for any purpose.
+      - "-": title page, also squence of pages for content to return to like catchall, already organized items can go into groups of under square category instead
+      - "+": decomposition into 36 pages, to be used for daily done/todo lists most likely, can have own predefined columns of text for every page (the default configuration goes with numbers for time at the right, and three categories at the left as template for todo list categories, as an example)
+      - summary page of a kind with triangle/3D plot idea to try, can be used for three categories of done items or other things to track per day, then they can be plotted as triangle between points on three axes, also input for those three values can be tracked per hour before being summed up for the day at the big triangle page
+      - square can be seen as separate habits or review points calendars with simple pages for plan/log/review available from headers of each calendar (#1 for example, can be changed into exact habit name in a text field below)
+      Text below can be deleted and checkbox undone for even more abstract pdf.
       </pre>
 
 			<label style='display: block'>
