--- a/www/index.html
+++ b/www/index.html
@@ -39,6 +39,15 @@
         />
 			</label>
 			<label style='display: block'>
+				Footer
+				<input
+          name='footer'
+          value=""
+          placeholder="Footer of every page"
+          type="text"
+        />
+			</label>
+			<label style='display: block'>
         Left column (on the day view)
 				<input
 						name='left_column'
@@ -94,7 +103,11 @@
 #9
 #10
 #11
-#12</textarea>
+#12
+#13
+#14
+#15
+#16</textarea>
 			</label>
 			<label style='display: block'>
 				Line thickness
