--- a/www/index.html
+++ b/www/index.html
@@ -13,10 +13,10 @@
       There is permanenent revolution of different work in progress or random pdf ideas laying around.
     </pre>
 
-		<h2>Square BS.pdf</h2>
+		<h2>E.pdf</h2>
 
     <form onsubmit="window.makeRue(event)">
-      <button type="submit" name="action">Make Square BS</button>
+      <button type="submit" name="action">Make E</button>
       <br />
       <br />
       <pre>
@@ -24,7 +24,7 @@
       - point/circle: scratchpad pages - for all temporary content to not return to, use by entering random invisible link inside the circle
       - "-": title page, also squence of pages for content to return to like catchall, already organized items can go into groups of under square category instead
       - "+": decomposition into 36 pages, to be used for daily done/todo lists most likely, can have own predefined columns of text for every page (the default configuration goes with numbers for time at the right, and three categories at the left as template for todo list categories, as an example)
-      - summary page of a kind with triangle/3D plot idea to try, can be used for three categories of done items or other things to track per day, then they can be plotted as triangle between points on three axes, also input for those three values can be tracked per hour before being summed up for the day at the big triangle page
+      - triangle page is for timed records, choose starting point and period on it to go to flat page
       - square can be seen as separate habits or review points calendars with simple pages for plan/log/review available from headers of each calendar (#1 for example, can be changed into exact habit name in a text field below)
       Text below can be deleted and checkbox undone for even more abstract pdf.
       </pre>
@@ -78,7 +78,6 @@
 				<input
 						name='saw_right'
 						type="checkbox"
-						checked="checked"
 						/>
 				Saw at the right
 			</label>
